fix(nested forms): wip

--- a/app/common/dynamic-form/containers/dynamic-form.component.html
+++ b/app/common/dynamic-form/containers/dynamic-form.component.html
@@ -1,4 +1,6 @@
 <ng-container
+  [formGroup]="group"
+  (change)="modelChange($event)"
   *ngFor="let conf of config;"
   dynamicItem
   [config]="conf"
