--- a/app/common/ui-basic/formGroup/item-formGroup.component.html
+++ b/app/common/ui-basic/formGroup/item-formGroup.component.html
@@ -1,11 +1,7 @@
-<fieldset [attr.class]="getFormGroupClass()" [formGroup]="getParentFormGroup()">
+<fieldset [attr.class]="getWrapperClass()">
   <legend>{{config.label}}</legend>
 
-  formGroup: {{config.key}}<br/>
-  parentId: {{config.parentId}} <br/>
-  formPath: {{config.formPath}} <br/>
-
-  <div class="form-row" [formGroupName]="config.key">
+  <div class="form-row">
 
     <ng-container
       *ngFor="let conf of items;"
