fix(formGroup validation): wip

--- a/app/common/ui-basic/formGroup/item-formGroup.component.html
+++ b/app/common/ui-basic/formGroup/item-formGroup.component.html
@@ -1,6 +1,10 @@
 <fieldset [attr.class]="getWrapperClass()">
   <legend>{{config.label}}</legend>
 
+  <pre>{{group }}</pre>
+
+  <item-errors [config]="config" [group]="group"></item-errors>
+
   <div class="form-row">
 
     <ng-container
@@ -11,5 +15,6 @@
     </ng-container>
 
   </div>
+
 
 </fieldset>
