fix(formGroup validation): wip

--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="getParentFormGroup()" *ngIf="componentRendered" [attr.class]="getWrapperClass()">
 
-  {{group.valid}}:{{group.errors | json}} <br/>
+  {{currentFormItem.value | json}}:{{currentFormItem.valid}}:{{currentFormItem.error | json}} <br/>
 
   <label [attr.for]="config.key" [attr.class]="'form-control-label'" *ngIf="isLabelVisible()">
     {{config.label}}
