--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="getParentFormGroup()" *ngIf="componentRendered" [attr.class]="getWrapperClass()">
+<div [formGroup]="getParentFormGroup()" *ngIf="componentRendered" [attr.class]="getWrapperClass() + ' ' + getValidationClass()">
 
   {{currentFormItem.value | json}}:{{currentFormItem.valid}}:{{currentFormItem.error | json}} <br/>
 
@@ -87,7 +87,7 @@
         [attr.placeholder]="config.placeholder">
        </textarea>
 
-  <item-errors *ngIf="currentFormItem.valid" [config]="config" [group]="group"></item-errors>
+  <item-errors [config]="config" [group]="group"></item-errors>
 
   <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{config.helpText}}</small>
 
