--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -85,7 +85,7 @@
         [attr.placeholder]="config.placeholder">
        </textarea>
 
-  <item-errors [config]="config" [group]="group"></item-errors>
+  <item-errors [config]="config" [group]="currentFormItem"></item-errors>
   <!---->
   <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{config.helpText}}</small>
 
