fix(formGroup validation): wip

--- a/app/component/start/start.component.html
+++ b/app/component/start/start.component.html
@@ -7,16 +7,15 @@
 
 <div class="row marketing">
 
-  <div class="col-lg-6">
-
+  <!--
+<div class="col-lg-6">
 <form-viewer-comp
-  [config]="dynamicItems"
-  [model]="formModel">
-  </form-viewer-comp>
+[config]="dynamicItems"
+[model]="formModel">
+</form-viewer-comp>
+</div> -->
 
-  </div>
-
-  <div class="col-lg-6">
+  <div class="col-xs-12">
    <form-builder-comp>
 
    </form-builder-comp>
