--- a/app/common/ui-basic/formGroup/item-formGroup.component.html
+++ b/app/common/ui-basic/formGroup/item-formGroup.component.html
@@ -1,6 +1,6 @@
 <fieldset [attr.class]="getWrapperClass()">
   <legend>{{config.label}}</legend>
-
+  status:{{currentFormItem.status}}
     <ng-container
       *ngFor="let conf of items;"
       dynamicFGItem
@@ -8,6 +8,6 @@
       [group]="group">
     </ng-container>
 
-  <item-errors [config]="config" [group]="group"></item-errors>
+  <item-errors [config]="config" [group]="currentFormItem"></item-errors>
   <!---->
 </fieldset>
