fix(formGroup validation): wip

--- a/app/common/ui-basic/formGroup/item-formGroup.component.html
+++ b/app/common/ui-basic/formGroup/item-formGroup.component.html
@@ -9,5 +9,9 @@
     </ng-container>
 
   <item-errors [config]="config" [group]="currentFormItem"></item-errors>
+
+  <div *ngIf="currentFormItem.status == 'PENDING'">
+    Validation is pending...
+  </div>
   <!---->
 </fieldset>
