fix(folder struct): wip

--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -9,6 +9,7 @@
         *ngIf="isControlTypeVisible('textbox')"
         [formControlName]="config.key"
         interactionHandler
+        [config]="config"
         attrSetter
         [attrConf]="config"
         [attr.class]="getControlClass()">
