fix(folder struct): wip

--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -10,6 +10,7 @@
         [formControlName]="config.key"
         interactionHandler
         [config]="config"
+        [group]="currentFormItem"
         attrSetter
         [attrConf]="config"
         [attr.class]="getControlClass()">
