--- a/app/component/start/form-viewer/form-viewer.component.html
+++ b/app/component/start/form-viewer/form-viewer.component.html
@@ -4,8 +4,11 @@
 
 
 <form (ngSubmit)="onSubmit($event)">
-  <dynamic-form-group
-    [config]="config"
-    [model]="{}">
-  </dynamic-form-group>
+
+
+
+    <dynamic-form-group
+      [config]="config">
+    </dynamic-form-group>
+
 </form>
