--- a/app/common/ui-basic/control/control.component.html
+++ b/app/common/ui-basic/control/control.component.html
@@ -4,7 +4,7 @@
     {{config.label}}
   </label>
 
-  status:{{currentFormItem.status}}
+ item class:{{getWrapperClass()}}
       <input
         [type]="config.type"
         *ngIf="isControlTypeVisible('textbox')"
