--- a/app/common/ui-basic/formGroup/item-formGroup.component.html
+++ b/app/common/ui-basic/formGroup/item-formGroup.component.html
@@ -1,11 +1,13 @@
 <fieldset [attr.class]="getWrapperClass()">
   <legend>{{config.label}}</legend>
-  status:{{currentFormItem.status}}
+  group class:{{getWrapperClass()}}
 
-    <dynamic-form-group
-      [config]="items"
-      [group]="currentFormItem">
-    </dynamic-form-group>
+  <ng-container
+    *ngFor="let conf of items;"
+    dynamicItem
+    [config]="conf"
+    [group]="group">
+  </ng-container>
 
   <item-errors [config]="config" [group]="currentFormItem"></item-errors>
 
