--- a/app/component/start/form-config-selector/form-config-selector.component.html
+++ b/app/component/start/form-config-selector/form-config-selector.component.html
@@ -1,6 +1,6 @@
-<form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
+<!---->
+  <form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
 
-  {{getConfigMap() | json}}
   <dynamic-form-group
     [config]="configSelectionForm"
     (onGroupValueChanged)="updateFormConfig($event)">
@@ -13,7 +13,38 @@
 <div class="row">
 
   <div class="col-sm-6">
+<!--
+    <div novalidate>
 
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+
+      <fieldset class="form-group row">
+        <legend>Personal Data</legend>
+        <div class="form-group col-sm-6">
+          <label for="firstname">First name</label>
+          <input type="text" class="form-control" id="firstname" placeholder="Password">
+        </div>
+        <div class="form-group col-sm-6">
+          <label for="firstname">First name</label>
+          <input type="text" class="form-control" id="firstname" placeholder="Password">
+        </div>
+        <div class="form-group col-sm-6">
+          <label for="firstname">First name</label>
+          <input type="text" class="form-control" id="firstname" placeholder="Password">
+        </div>
+        <div class="form-group col-sm-6">
+          <label for="firstname">First name</label>
+          <input type="text" class="form-control" id="firstname" placeholder="Password">
+        </div>
+      </fieldset>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+
+    </div>
+-->
     <form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)">
 
       <dynamic-form-group
@@ -22,6 +53,7 @@
       </dynamic-form-group>
 
     </form>
+
   </div>
 
   <div class="col-sm-6">
